# interactive_plotting

./: .gitignore  CMakeLists.txt  README.md  design.md
include/iplot/: Context.hpp  Document.hpp  Renderer.hpp  Types.hpp
src/: Context.cpp  Renderer.cpp
test/: test.cpp
